# aio-trading-stat

./: .gitignore  README.md  main.py  pyproject.toml
config/: .env_example  bot_config.py  bot_config_example.py  database_config_example.py  logging_config_example.py  scrapper_config_example.py
data_scrapper/: data_scrapping.py  monitor_data.py  scrap_data_task.py
database/: database_connection.py  database_manager.py
logs/: logging.py  logging_function.py
old_database/: create_connection.py  users_rights_table.py
telegram_bot/config/: bot_config_example.py
telegram_bot/database/: create_connection.py  create_table.py  database_connection.py  database_model.py
telegram_bot/handlers/: message_handler.py  start_command_handler.py
utils/: date_utils.py
