[tool.poetry]
name = "aio-trading-stat"
version = "0.1.0"
description = ""
authors = ["Nikita Korobov <riper5218@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
aiogram = "^3.3.0"
beautifulsoup4 = "4.12.3"
lxml = "5.1.0"
celery = "5.3.6"
pyppeteer = "1.0.2"
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
