[tool.poetry]
name = "aio-trading-stat"
version = "0.1.0"
description = ""
authors = ["Eiritel <zhenya.mikhailov.02@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
celery = "^5.3.6"
pyppeteer = "^2.0.0"
sqlalchemy = "^2.0.27"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
